work space got ready, using typescript and node hot reload

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "an exercise with sequelize",
   "main": "index.js",
   "scripts": {
+    "start": "bash startDevServer.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -11,5 +12,13 @@
     "database"
   ],
   "author": "noviceGuru",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.25.5"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.9",
+    "typescript": "^4.8.4"
+  }
 }
