--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "author": "noviceGuru",
   "license": "MIT",
   "dependencies": {
-    "mysql2": "^2.3.3",
-    "sequelize": "^6.25.5"
+    "express": "^4.18.2",
+    "sequelize": "^6.25.5",
+    "sqlite3": "^5.1.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
     "typescript": "^4.8.4"
   }
