--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
+    "@types/sequelize": "^4.28.14",
     "typescript": "^4.8.4"
   }
 }
