--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
+    "jwt-simple": "^0.5.6",
     "sequelize": "^6.25.5",
     "sqlite3": "^5.1.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/jwt-simple": "^0.5.33",
     "@types/node": "^18.11.9",
     "@types/sequelize": "^4.28.14",
     "typescript": "^4.8.4"
