--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,6 @@
         "synchronousWatchDirectory": true,
         // Finally, two additional settings for reducing the amount of possible
         // files to track  work from these directories
-        "excludeDirectories": ["**/node_modules", "_build"],
-        "excludeFiles": ["build/fileWhichChangesOften.ts"]
+        "excludeDirectories": ["**/node_modules", "/build"],
       }
 }
