--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "author": "noviceGuru",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "jwt-simple": "^0.5.6",
     "sequelize": "^6.25.5",
     "sqlite3": "^5.1.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
     "@types/jwt-simple": "^0.5.33",
     "@types/node": "^18.11.9",
