sign in and sign out work with token. CRUD for tasks work with token, which provides userId, with which tasks are associated with tasks.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "an exercise with sequelize",
   "main": "index.js",
   "scripts": {
-    "start": "bash startDevServer.sh",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node --watch ./build/index.js",
   },
   "keywords": [
     "exercise",
