--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "helmet": "^6.0.1",
     "jwt-simple": "^0.5.6",
     "sequelize": "^6.25.5",
     "sqlite3": "^5.1.2"
@@ -25,6 +26,7 @@
     "@types/jwt-simple": "^0.5.33",
     "@types/node": "^18.11.9",
     "@types/sequelize": "^4.28.14",
+    "dotenv": "^16.0.3",
     "typescript": "^4.8.4"
   }
 }
