--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "an exercise with sequelize",
   "main": "./build/index.js",
   "scripts": {
-    "start": "node --watch ./build/index.js"
+    "start": "node ."
   },
   "keywords": [
     "exercise",
