--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
     "@types/jwt-simple": "^0.5.33",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.9",
     "@types/sequelize": "^4.28.14",
     "dotenv": "^16.0.3",
+    "morgan": "^1.10.0",
     "typescript": "^4.8.4"
   }
 }
